Almost ACT3 donde
-Path finding done
-Agent go in path done
-Doors system done
-UI Text made

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ set(ENGINE_HEADER_FILES
   ${CMAKE_CURRENT_LIST_DIR}/include/engine/math.h
   ${CMAKE_CURRENT_LIST_DIR}/include/engine/scene.h
   ${CMAKE_CURRENT_LIST_DIR}/include/engine/sprite.h
+  ${CMAKE_CURRENT_LIST_DIR}/include/engine/text_sprite.h
   ${CMAKE_CURRENT_LIST_DIR}/include/engine/texture.h
   ${CMAKE_CURRENT_LIST_DIR}/include/engine/ui_manager.h
   ${CMAKE_CURRENT_LIST_DIR}/include/engine/window.h)
@@ -69,11 +70,14 @@ set(IA_HEADER_FILES
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/defines.h
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/map.h
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/mind.h
+  ${CMAKE_CURRENT_LIST_DIR}/include/ia/door.h
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/path_finding/path_finding.h
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/path_finding/path_manager.h
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/scene_steering.h
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/scene_path.h
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/world.h
+  ${CMAKE_CURRENT_LIST_DIR}/include/ia/world_steering.h
+  ${CMAKE_CURRENT_LIST_DIR}/include/ia/world_path.h
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/movement/kinematic/kinematicarrive.h
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/movement/kinematic/kinematicflee.h
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/movement/kinematic/kinematicseek.h
