--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,6 @@ set(IA_PATHFINDING_SRC_FILES
   ${CMAKE_CURRENT_LIST_DIR}/src/ia/pathfinding/scene.cc
 )
 
-
 set(IA_FINAL_HEADER_FILES
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/final/body.h
   ${CMAKE_CURRENT_LIST_DIR}/include/ia/final/mind.h
@@ -148,14 +147,33 @@ set(IA_FINAL_SRC_FILES
   ${CMAKE_CURRENT_LIST_DIR}/src/ia/final/scene.cc
 )
 
+
+set(IA_FLOCKING_HEADER_FILES
+  ${CMAKE_CURRENT_LIST_DIR}/include/ia/flocking/alignment.h
+  ${CMAKE_CURRENT_LIST_DIR}/include/ia/flocking/cohesion.h
+  ${CMAKE_CURRENT_LIST_DIR}/include/ia/flocking/separation.h
+  ${CMAKE_CURRENT_LIST_DIR}/include/ia/flocking/body.h
+  ${CMAKE_CURRENT_LIST_DIR}/include/ia/flocking/mind.h
+  ${CMAKE_CURRENT_LIST_DIR}/include/ia/flocking/flocking_manager.h
+  ${CMAKE_CURRENT_LIST_DIR}/include/ia/flocking/scene.h
+  ${CMAKE_CURRENT_LIST_DIR}/include/ia/flocking/world.h
+)
+
+set(IA_FLOCKING_SRC_FILES
+  ${CMAKE_CURRENT_LIST_DIR}/src/ia/flocking/body.cc
+  ${CMAKE_CURRENT_LIST_DIR}/src/ia/flocking/mind.cc
+  ${CMAKE_CURRENT_LIST_DIR}/src/ia/flocking/flocking_manager.cc
+  ${CMAKE_CURRENT_LIST_DIR}/src/ia/flocking/scene.cc
+)
+
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/src
   PREFIX "Source Files"
   FILES ${NET_SRC_FILES} ${MATHLIB_SRC_FILES} ${ENGINE_SRC_FILES}
-    ${IA_SRC_FILES} ${IA_STEERING_SRC_FILES} ${IA_PATHFINDING_SRC_FILES}${IA_FINAL_SRC_FILES})
+    ${IA_SRC_FILES} ${IA_STEERING_SRC_FILES} ${IA_PATHFINDING_SRC_FILES} ${IA_FINAL_SRC_FILES} ${IA_FLOCKING_SRC_FILES})
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/include
   PREFIX "Header Files"
   FILES ${CONTAINERS_HEADER_FILES} ${NET_HEADER_FILES} ${MATHLIB_HEADER_FILES} ${ENGINE_HEADER_FILES}
-    ${IA_HEADER_FILES} ${IA_STEERING_HEADER_FILES} ${IA_PATHFINDING_HEADER_FILES}${IA_FINAL_HEADER_FILES})
+    ${IA_HEADER_FILES} ${IA_STEERING_HEADER_FILES} ${IA_PATHFINDING_HEADER_FILES} ${IA_FINAL_HEADER_FILES} ${IA_FLOCKING_HEADER_FILES})
 
 #****************************************************
 # AG01 - Multithreading
@@ -235,7 +253,7 @@ foreach(PROJECT ${IA_PROJECTS})
   project_for_ia(${PROJECT})
 endforeach()
 
-target_sources(AG03 PRIVATE ${IA_STEERING_SRC_FILES} ${IA_STEERING_HEADER_FILES} ${IA_PATHFINDING_HEADER_FILES} ${IA_PATHFINDING_SRC_FILES} ${IA_FINAL_HEADER_FILES} ${IA_FINAL_SRC_FILES})
-target_sources(OPT01 PRIVATE ${IA_STEERING_SRC_FILES} ${IA_STEERING_HEADER_FILES} ${IA_PATHFINDING_HEADER_FILES} ${IA_PATHFINDING_SRC_FILES} ${IA_FINAL_HEADER_FILES} ${IA_FINAL_SRC_FILES})
-target_sources(ACT03 PRIVATE ${IA_STEERING_SRC_FILES} ${IA_STEERING_HEADER_FILES} ${IA_PATHFINDING_HEADER_FILES} ${IA_PATHFINDING_SRC_FILES} ${IA_FINAL_HEADER_FILES} ${IA_FINAL_SRC_FILES})
-target_sources(ACT04 PRIVATE ${IA_STEERING_SRC_FILES} ${IA_STEERING_HEADER_FILES} ${IA_PATHFINDING_HEADER_FILES} ${IA_PATHFINDING_SRC_FILES} ${IA_FINAL_HEADER_FILES} ${IA_FINAL_SRC_FILES})
+target_sources(AG03 PRIVATE ${IA_STEERING_SRC_FILES} ${IA_STEERING_HEADER_FILES} ${IA_PATHFINDING_HEADER_FILES} ${IA_PATHFINDING_SRC_FILES} ${IA_FINAL_HEADER_FILES} ${IA_FINAL_SRC_FILES} ${IA_FLOCKING_HEADER_FILES} ${IA_FLOCKING_SRC_FILES})
+target_sources(OPT01 PRIVATE ${IA_STEERING_SRC_FILES} ${IA_STEERING_HEADER_FILES} ${IA_PATHFINDING_HEADER_FILES} ${IA_PATHFINDING_SRC_FILES} ${IA_FINAL_HEADER_FILES} ${IA_FINAL_SRC_FILES} ${IA_FLOCKING_HEADER_FILES} ${IA_FLOCKING_SRC_FILES})
+target_sources(ACT03 PRIVATE ${IA_STEERING_SRC_FILES} ${IA_STEERING_HEADER_FILES} ${IA_PATHFINDING_HEADER_FILES} ${IA_PATHFINDING_SRC_FILES} ${IA_FINAL_HEADER_FILES} ${IA_FINAL_SRC_FILES} ${IA_FLOCKING_HEADER_FILES} ${IA_FLOCKING_SRC_FILES})
+target_sources(ACT04 PRIVATE ${IA_STEERING_SRC_FILES} ${IA_STEERING_HEADER_FILES} ${IA_PATHFINDING_HEADER_FILES} ${IA_PATHFINDING_SRC_FILES} ${IA_FINAL_HEADER_FILES} ${IA_FINAL_SRC_FILES} ${IA_FLOCKING_HEADER_FILES} ${IA_FLOCKING_SRC_FILES})
